--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/cli": "^7.16.0",
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
+    "@svgr/webpack": "^6.1.2",
     "babel-jest": "^25.5.1",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.3",
@@ -32,7 +33,9 @@
     "html-webpack-plugin": "^4.2.0",
     "jest": "^25.5.4",
     "live-server": "^1.2.1",
+    "loader": "^2.1.1",
     "mini-css-extract-plugin": "^0.9.0",
+    "svg-inline-loader": "^0.8.2",
     "url-loader": "^4.1.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
